--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Hello,<br></h2>
                     <p class="lead">
-                      My name is Qi Wei, I am studying Computer Science at Washington University at St. Louis.
+                      My name is Qi Wei, I am studying Computer Science at Washington University in St. Louis.
                     </p>
                     <p class="lead">
                       I am a programmer and dancer.
