--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> <span class="network-name"></span></a>
                           </li>
                           <li>
-                              <a href="https://github.com/QiWwwww" class="">
+                              <a href="https://github.com/QiWei19" class="">
                                 <i class="fa fa-github-square fa-3x" aria-hidden="true"></i> <span class="network-name"></span></a>
                           </li>
                           <li>
