--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
                               <a href="https://www.youtube.com/channel/UCDzyhTvbwk0OEFjQrHxcdcA" class="">
                                 <i class="fa fa-youtube-square fa-3x" aria-hidden="true"></i> <span class="network-name"></span></a>
                           </li>
+                          <li>
+                              <a href="mailto:qiwei@wustl.edu" class="">
+                                <i class="fa fa-envelope-square fa-3x" aria-hidden="true"></i> <span class="network-name"></span></a>
+                          </li>
                       </ul>
                   </div>
               </div>
