--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!--
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  -->
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400" rel="stylesheet">
 
 </head>
 
@@ -67,18 +70,18 @@
                     <h1 class="section-heading">Hello,<br></h1>
                     <br><br>
                     <p class="lead">
-                      My name is <span class="highlight medium-font">Qi Wei</span>
+                      My name is <span class=" highlight medium-font">Qi Wei</span>
                       , I am studying Computer Science at Washington University in St. Louis.
                     </p>
                     <p class="lead">
-                      I am a <span class="highlight medium-font"> programmer </span> and dancer.
+                      I am a <span class=" highlight medium-font"> programmer </span> and dancer.
                     </p>
                     <p class="lead">
                       I love coffee and cupcakes.
                     </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="photo.jpeg" alt="">
+                    <img class="img-responsive" src="img\photo.jpeg" alt="">
                 </div>
             </div>
         </div>
@@ -98,23 +101,27 @@
 
                           <li>
                               <a href="https://www.linkedin.com/in/qiwei19" class="">
-                                <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i> <span class="network-name"></span></a>
+                                <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
                           </li>
+                          <li></li>
                           <li>
                               <a href="https://github.com/QiWei19" class="">
-                                <i class="fa fa-github-square fa-3x" aria-hidden="true"></i> <span class="network-name"></span></a>
+                                <i class="fa fa-github-square fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
                           </li>
+                          <li></li>
                           <li>
                               <a href="https://www.facebook.com/profile.php?id=100006414787334" class="">
-                                <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i> <span class="network-name"></span></a>
+                                <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
                           </li>
+                          <li></li>
                           <li>
                               <a href="https://www.youtube.com/channel/UCDzyhTvbwk0OEFjQrHxcdcA" class="">
-                                <i class="fa fa-youtube-square fa-3x" aria-hidden="true"></i> <span class="network-name"></span></a>
+                                <i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
                           </li>
+                          <li></li>
                           <li>
                               <a href="mailto:qiwei@wustl.edu" class="">
-                                <i class="fa fa-envelope-square fa-3x" aria-hidden="true"></i> <span class="network-name"></span></a>
+                                <i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
                           </li>
                       </ul>
                   </div>
