--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#"><span class="large-font"></span></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -74,7 +73,7 @@
                       , I am studying Computer Science at Washington University in St. Louis.
                     </p>
                     <p class="lead">
-                      I am a <span class=" highlight medium-font"> programmer </span> and dancer.
+                      I am a <span class=" highlight medium-font"> programmer </span>, dancer and traveler.
                     </p>
                     <p class="lead">
                       I love coffee and cupcakes.
