--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right rightnav">
                     <li>
-                        <a href="#about"><span class="rightnav">About</span></a>
+                        <a href="index2.html"><span class="rightnav">About</span></a>
                     </li>
                     <li>
-                        <a href="#contact">Find Me</a>
+                        <a href="tech.html">Tech</a>
+                    </li>
+                    <li>
+                        <a href="travel.html">Travel</a>
                     </li>
                 </ul>
             </div>
@@ -58,7 +61,7 @@
 
 
     <!-- Page Content -->
-
+  </div>
 	<a  name="about"></a>
     <div class="content-section-b">
         <div class="container">
@@ -85,52 +88,65 @@
             </div>
         </div>
         <!-- /.container -->
-
     </div>
     <!-- /.content-section-a -->
+  </div>
 
     </div>
-    <!-- /.content-section-a -->
-    <a  name="contact"></a>
-      <div class="banner">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-12">
-                      <ul class="list-inline">
 
-                          <li>
-                              <a href="https://www.linkedin.com/in/qiwei19" class="">
-                                <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
-                          </li>
-                          <li></li><li></li>
-                          <li>
-                              <a href="https://github.com/QiWei19" class="">
-                                <i class="fa fa-github-square fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
-                          </li>
-                          <li></li><li></li>
-                          <li>
-                              <a href="https://www.facebook.com/profile.php?id=100006414787334" class="">
-                                <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
-                          </li>
-                          <li></li><li></li>
-                          <li>
-                              <a href="https://www.youtube.com/channel/UCDzyhTvbwk0OEFjQrHxcdcA" class="">
-                                <i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
-                          </li>
-                          <li></li><li></li>
-                          <li>
-                              <a href="mailto:qiwei@wustl.edu" class="">
-                                <i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
-                          </li>
-                      </ul>
+          <!-- Footer -->
+          <footer>
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                          <ul class="list-inline text-center">
+                              <li>
+                                  <a href="https://www.linkedin.com/in/qiwei19">
+                                      <span class="fa-stack fa-lg">
+                                          <i class="fa fa-circle fa-stack-2x"></i>
+                                          <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                                      </span>
+                                  </a>
+                              </li>
+
+                              <li>
+                                  <a href="https://github.com/QiWei19">
+                                      <span class="fa-stack fa-lg">
+                                          <i class="fa fa-circle fa-stack-2x"></i>
+                                          <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                      </span>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a href="https://www.facebook.com/profile.php?id=100006414787334">
+                                      <span class="fa-stack fa-lg">
+                                          <i class="fa fa-circle fa-stack-2x"></i>
+                                          <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                      </span>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a href="https://www.youtube.com/channel/UCDzyhTvbwk0OEFjQrHxcdcA">
+                                      <span class="fa-stack fa-lg">
+                                          <i class="fa fa-circle fa-stack-2x"></i>
+                                          <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                                      </span>
+                                  </a>
+                              </li>
+                              <li>
+                                  <a href="mailto:qiwei@wustl.edu">
+                                      <span class="fa-stack fa-lg">
+                                          <i class="fa fa-circle fa-stack-2x"></i>
+                                          <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                                      </span>
+                                  </a>
+                              </li>
+                          </ul>
+                          <p class="copyright text-muted">Copyright &copy; Qi Wei 2016</p>
+                      </div>
                   </div>
               </div>
-
-          </div>
-          <!-- /.container -->
-      </div>
-
-
+          </footer>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
