--- a/tech.html
+++ b/tech.html
@@ -44,7 +44,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right rightnav">
                   <li>
-                      <a href="index2.html"><span class="rightnav">About</span></a>
+                      <a href="index.html"><span class="rightnav">About</span></a>
                   </li>
                   <li>
                       <a href="tech.html">Tech</a>
